grafana/grafana-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-clusterip
spec:
  selector:
    tool: grafana
  type: ClusterIP
  ports:
    - name: traffic
      port: 3000
      targetPort: 3000
