grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /


spec:
  rules:
  - host: assignment.grafana.co
    http:
      paths:
      - backend:
          service:
            name: grafana-clusterip
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: assignment.prom.es
    http:
      paths:
      - backend:
          service:
            name: elastic-search-cluster
            port:
              number: 9200
        path: /es
        pathType: Prefix
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-clusterip
            port:
              number: 9090
